# jilutil

./: .pre-commit-config.yaml  .secrets.baseline  README.md  job_split.py  justfile  pyproject.toml
.github/workflows/: deploy.yaml
jilutil/: AutoSysJob.py  JilParser.py  __init__.py  auto_sys_job.py  jil_parser.py  jilutil.py  utils.py
tests/: conftest.py  four.jil  one.jil  test_AutoSysJob.py  test_auto_sys_job.py  test_jil_parser.py  two.jil
