[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jilutil"
version = "0.0.0"
requires-python = ">= 3.9"
license = {file = "LICENSE"}

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",

    # package
    "build",
    "twine>=4.0.2",


    # test
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-sugar>=0.9.7",

    # lint
    "ruff>=0.1.0",

    # pre-commit
    "pre-commit>=3.6.0; python_version >= '3.9'",
    "detect-secrets>=1.4.0",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["venv", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
testpaths = ["jilutil", "tests"]

doctest_optionflags = ["ELLIPSIS", "NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
addopts = [
    "-s",
    "--continue-on-collection-errors",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--no-header",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]
